# avr_cmake

./: .gitignore  CMakeLists.txt  Makefile  Readme  avr-toolchain.cmake  main.c  project.cmake  upload.cmake
lib/adc/: adc.h
lib/clock/: clock.h
lib/common/: common.h  common_avr.h
lib/console/: console.c  console.h
lib/display/: display.c  display.h  display_i2c.c  screen.c  screen.h
lib/display/sd1306/: sd1306_display.c  sd1306_display.h
lib/font/: font.c  font.h
lib/gpio/: gpio.cmake
lib/gpio/avr/: avr-gpio.c  avr-gpio.cmake
lib/i2c/: i2c.h  i2c_master.c  i2c_master.h
lib/list/: list.h
lib/pio/: gpio.c  gpio.h  pio.h
lib/pwm/: pwm.h
lib/usart/: usart.c  usart.h
src/: atmega328p.xn  main.c
